--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bags-store",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "https://github.com/bbblllaaaccckkk/bags-store.git",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,16 +10,25 @@
     "type": "git",
     "url": "git+https://github.com/bbblllaaaccckkk/bags-store.git"
   },
-  "author": "",
+  "author": "Guseinov Ruslan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/bbblllaaaccckkk/bags-store/issues"
   },
   "homepage": "https://github.com/bbblllaaaccckkk/bags-store#readme",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "browser-sync": "^2.26.3",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rigger": "^0.5.8",
+    "gulp-sass": "^4.0.2",
+    "gulp-watch": "^5.0.1",
+    "run-sequence": "^2.2.1"
   },
   "dependencies": {
-    "gulp-sass": "^4.0.2"
+    "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.4"
   }
 }
